Fixed overflowing record covers

--- a/src/css/senux/senux-opac.scss
+++ b/src/css/senux/senux-opac.scss
@@ -354,11 +354,22 @@
 }
 
 #catalogue_detail_biblio {
+	display: flex;
+	flex-direction: row;
+
 	padding: 1rem;
 	color: $defaultText;
 	background-color: $defaultFg;
 	border: $defaultBorderWidth $defaultBorderType $defaultBorderCol;
-	border-radius: $defaultRadius
+	border-radius: $defaultRadius;
+
+	.bookcover {
+		flex: 1 0 auto
+	}
+
+	.unapi-id, .Z3988, .record {
+		flex: 0 1 auto
+	}
 }
 
 #action, .actions,
